--- a/End.tex
+++ b/End.tex
@@ -3,7 +3,7 @@
 \end{frame}
 
 \appendix
-\begin{frame}{References}
+\begin{frame}[allowframebreaks]{References}
     \nocite{*}
     \bibliography{focus-demo_bibliography}
     \bibliographystyle{plain}
