--- a/focus-demo_bibliography.bib
+++ b/focus-demo_bibliography.bib
@@ -1,3 +1,46 @@
+@misc{falor2023collapsible,
+      title={A Collapsible Polynomial Hierarchy for Promise Problems}, 
+      author={Chirag Falor and Shu Ge and Anand Natarajan},
+      year={2023},
+      eprint={2311.12228},
+      archivePrefix={arXiv},
+      primaryClass={cs.CC}
+}
+@Inbook{Goldreich2006,
+author="Goldreich, Oded",
+editor="Goldreich, Oded
+and Rosenberg, Arnold L.
+and Selman, Alan L.",
+title="On Promise Problems: A Survey",
+bookTitle="Theoretical Computer Science: Essays in Memory of Shimon Even",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="254--290",
+abstract="The notion of promise problems was introduced and initially studied by Even, Selman and Yacobi (Inform. and Control, Vol. 61, pages 159--173, 1984). In this article we survey some of the applications that this notion has found in the twenty years that elapsed. These include the notion of ``unique solutions'', the formulation of ``gap problems'' as capturing various approximation tasks, the identification of complete problems (especially for the class {\$}{\{}{\backslash}cal SZK{\}}{\$}), the indication of separations between certain computational resources, and the enabling of presentations that better distill the essence of various proofs.",
+isbn="978-3-540-32881-0",
+doi="10.1007/11685654_12",
+url="https://doi.org/10.1007/11685654_12"
+}
+@article{Gharibian,
+  author       = {Sevag Gharibian and
+                  Miklos Santha and
+                  Jamie Sikora and
+                  Aarthi Sundaram and
+                  Justin Yirka},
+  title        = {Quantum generalizations of the polynomial hierarchy with applications
+                  to {QMA(2)}},
+  journal      = {CoRR},
+  volume       = {abs/1805.11139},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1805.11139},
+  eprinttype    = {arXiv},
+  eprint       = {1805.11139},
+  timestamp    = {Mon, 13 Aug 2018 16:46:02 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1805-11139.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @book{Nielsen11,
    title =     {Quantum Computation and Quantum Information: 10th Anniversary Edition},
    author =    {Michael A. Nielsen, Isaac L. Chuang},
@@ -6,3 +49,16 @@
    year =      {2011},
    edition =   {10 Anv},
    }
+   @misc{CCH5,
+  author        = {JLuca Trevisan},
+  title         = {Computational Complexity Handout 5},
+  year          = {2010},
+  publisher={Stanford University}
+}
+@misc{NCTL13,
+  author        = {Jonathan Katz},
+  title         = {Notes on Complexity Theory, Lecture 13},
+  month         = {February},
+  year          = {2012},
+  publisher={University of Maryland}
+}
