--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -20,6 +20,7 @@
 \definecolor{text}{RGB}{60, 60, 80}
 \definecolor{background}{RGB}{255, 255, 255}
 
+\setmathfont{Latin Modern Math}[range={frak,\bigcap,\bigcup}]
 \newif\ifplacelogo % create a new conditional
 \placelogotrue % set it to true
 
