--- a/Z-PH of Promise.tex
+++ b/Z-PH of Promise.tex
@@ -25,7 +25,7 @@
         \end{frame}
         \begin{frame}{Basic definitions and properties}
             \begin{block}{Universal quantifier}
-                Let $\mathcal{C}$ be a class of promise problems. Then $L \in \exists \mathcal{C}$ if there is a problem $A$ in $\mathcal{C}$ and a polynomial $p$ such that:
+                Let $\mathcal{C}$ be a class of promise problems. Then $L \in \forall \mathcal{C}$ if there is a problem $A$ in $\mathcal{C}$ and a polynomial $p$ such that:
                 $$x\in L_+ \iff \foralll{y \in \{0,1\}^{p(x)}}{} <x,y> \in A_+$$
                 $$x\in L_- \iff \existss{y \in \{0,1\}^{p(x)}}{} <x,y> \in A_-$$
             \end{block}
@@ -46,8 +46,8 @@
         \end{frame}
         \begin{frame}{Hierarchy of promise classes}
             \begin{block}{A Collapsible Polynomial Hierarchy for promise class $\mathcal{C}$}
-                $\Sigma_0 := \exists \mathcal{C}$ and
-                $\Pi_0 := \forall \mathcal{C}$\\
+                $\Sigma_0 :=  \mathcal{C}$ and
+                $\Pi_0 :=  \mathcal{C}$\\
                 For $k \geq 1 $:
                     $$\Sigma_k := \exists\Pi_{k-1} \text{ and }
                     \Pi_k := \forall\Sigma_{k-1}$$
@@ -56,14 +56,14 @@
             \end{block}
         \end{frame}
 
-        \begin{frame}{Scheme of the Polynomial Hierarchy for promise class $\mathcal{C}$}            
-            \begin{figure}
-                \centering
-                \includegraphics{focus-logo.pdf}
-                \caption{Figure caption.}
-                \label{fig:focuslogo}
-            \end{figure}
-        \end{frame}
+        % \begin{frame}{Scheme of the Polynomial Hierarchy for promise class $\mathcal{C}$}            
+        %     \begin{figure}
+        %         \centering
+        %         \includegraphics{focus-logo.pdf}
+        %         \caption{Figure caption.}
+        %         \label{fig:focuslogo}
+        %     \end{figure}
+        % \end{frame}
         
         \begin{frame}{Conditional Collapse of $\mathcal{H}_{\mathcal{C}}$}
             \begin{lemma}{conditional collapse}
@@ -104,8 +104,8 @@
         \begin{frame}{Conclusion}
             \begin{block}{Conclusion}
                 The collapsibility of $\mathcal{H}_{\mathcal{C}}$ and the fact that $\mathcal{C}$ 
-                can be arbitrarily chosen, gives us a powerful tool to generalize polynomial hierarchy for 
-                the new collections of complexity classes that emerged in the world of computer science in 
+                can be arbitrarily chosen, gives us a powerful tool to generalize the hierarchy for 
+                the new collections of complexity classes that have emerged in the world of computer science in 
                 recent years.
             \end{block}
         \end{frame}
