--- a/Z-PromiseProblems.tex
+++ b/Z-PromiseProblems.tex
@@ -57,7 +57,7 @@
             \end{block}
             \pause
             \begin{alertblock}{}
-                A solver machine $T$ can output anything outside of the promise, or even doesn't halt.
+                $T$ can output anything outside of the promise, or even doesn't halt.
             \end{alertblock}
         \end{frame}
         
@@ -78,8 +78,8 @@
             \end{block}    
             \pause
             \begin{block}{proposition}
-                $T$ solves $A$ and $B$ is a special case of $A \implies T$ solves
-                $B$.
+                $T$ solves $B$ and $A$ is a special case of $B \implies T$ solves
+                $A$.
             \end{block}
         \end{frame}
         
@@ -101,7 +101,7 @@
                 $$x \in L_+ \implies \underset{r\in \{0,1\}^{p(|x|)}}{Pr}(F(x,r)) \geq 2/3$$
                 $$x \in L_- \implies \underset{r\in \{0,1\}^{p(|x|)}}{Pr}\ (F(x,r)) \leq 1/3$$
             \end{block}
-            \pause
+            % \pause
         \end{frame}
         
         \begin{frame}{complete problems for $Promise-BPP$}
