--- a/focus-demo_bibliography.bib
+++ b/focus-demo_bibliography.bib
@@ -62,3 +62,18 @@ url="https://doi.org/10.1007/11685654_12"
   year          = {2012},
   publisher={University of Maryland}
 }
+
+@book{books/daglib/0004035,
+  added-at = {2011-04-12T00:00:00.000+0200},
+  author = {Hromkovic, Juraj},
+  biburl = {https://www.bibsonomy.org/bibtex/23bc217a1b4033d43309ffaac81e968e1/dblp},
+  interhash = {263cf1615bb17c94f0097606d00feecc},
+  intrahash = {3bc217a1b4033d43309ffaac81e968e1},
+  isbn = {978-3-540-66860-2},
+  keywords = {dblp},
+  pages = {I-XI, 1-492},
+  publisher = {Springer},
+  timestamp = {2011-04-29T15:26:40.000+0200},
+  title = {Algorithmics for hard problems - introduction to combinatorial optimization, randomization, approximation, and heuristics.},
+  year = 2001
+}
